Add meta to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="ADSS est un leader algérien de la sécurité offrant une gamme complète de services de vidéosurveillance, détection d'incendie, contrôle d'accès, réseaux informatiques sécurisés et photovoltaïque. Contactez notre équipe d'experts pour une consultation gratuite.">
   <script src="https://kit.fontawesome.com/90d345d012.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <title>ADSS</title>
@@ -61,7 +63,7 @@
         <section class="intro">
           <h1><span>ad</span>vanced <span>s</span>ecurity <span>s</span>ystems</h1>
           <p>
-            Nous sommes ADSS, une entreprise spécialisée dans la vidéosurveillance, dédiée au développement et à la
+            Nous sommes ADSS, une société spécialisée dans la vidéosurveillance, dédiée au développement et à la
             distribution d'équipements ainsi que de solutions de CCTV.
           </p>
           <p>
@@ -137,32 +139,38 @@
     <article id="services">
       <div class="container">
         <h2 class="title">nos services</h2>
-        <div class="content">
-          <section class="service__item">
-            <h3 class="subtitle">video surveillance</h3>
-            <div class="service__avatar">
-              <p>1</p>
-            </div>
-          </section>
-          <section class="service__item">
-            <h3 class="subtitle">anti-incendie</h3>
-            <div class="service__avatar">
-              <p>2</p>
-            </div>
-          </section>
-          <section class="service__item">
-            <h3 class="subtitle">contrôle d'accès</h3>
-            <div class="service__avatar">
-              <p>3</p>
-            </div>
-          </section>
-          <section class="service__item">
-            <h3 class="subtitle">réseau informatique</h3>
-            <div class="service__avatar">
-              <p>4</p>
-            </div>
-          </section>
-        </div>
+      </div>
+      <div class="content">
+        <section class="service__item">
+          <h3 class="subtitle">video surveillance</h3>
+          <div class="service__avatar">
+            <p>1</p>
+          </div>
+        </section>
+        <section class="service__item">
+          <h3 class="subtitle">anti-incendie</h3>
+          <div class="service__avatar">
+            <p>2</p>
+          </div>
+        </section>
+        <section class="service__item">
+          <h3 class="subtitle">contrôle d'accès</h3>
+          <div class="service__avatar">
+            <p>3</p>
+          </div>
+        </section>
+        <section class="service__item">
+          <h3 class="subtitle">réseau informatique</h3>
+          <div class="service__avatar">
+            <p>4</p>
+          </div>
+        </section>
+        <section class="service__item">
+          <h3 class="subtitle">photovoltaïque</h3>
+          <div class="service__avatar">
+            <p>5</p>
+          </div>
+        </section>
       </div>
     </article>
 
